samples/_failures_safe/1761459255_8e60da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_616c3cd4.c: In function ‘main’:
./samples/SAFE/__tmp_616c3cd4.c:177:42: error: expected ‘)’ at end of input
  177 |         token = tokenizer_next(&tokenizer
      |                               ~          ^
      |                                          )
./samples/SAFE/__tmp_616c3cd4.c:177:9: error: expected declaration or statement at end of input
  177 |         token = tokenizer_next(&tokenizer
      |         ^~~~~
./samples/SAFE/__tmp_616c3cd4.c:177:9: error: expected declaration or statement at end of input
